Add admin submission link to peer review and results pages

--- a/courses/templates/projects/eval.html
+++ b/courses/templates/projects/eval.html
@@ -3,69 +3,77 @@
 {% load static %}
 
 {% block meta_robots %}
-  <meta name="robots" content="noindex">
+<meta name="robots" content="noindex">
 {% endblock %}
 
 {% block breadcrumbs %}
-  <li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
-  <li><a href="{% url 'project' course_slug=course.slug project_slug=project.slug %}">{{ project.title }}</a></li>
+<li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
+<li><a href="{% url 'project' course_slug=course.slug project_slug=project.slug %}">{{ project.title }}</a></li>
 {% endblock %}
 
 {% block content %}
 
 {% if messages %}
 {% for message in messages %}
-  <div class="alert {{ message.tags }}">
-    <p>{{ message }}</p>
-  </div>
+<div class="alert {{ message.tags }}">
+  <p>{{ message }}</p>
+</div>
 {% endfor %}
 {% endif %}
 
 <h2 class="mb-3 text-center">Evaluations for {{ project.title }}</h2>
 
-{% if not is_authenticated %}
-  <div class="alert alert-info" role="alert">
-    <p>Please <a href="{% url 'login' %}">log in</a> to see the projects you need to evaluate.</p>
-  </div>
-{% elif not has_submission and project.state == 'PR' %}
-  <div class="alert alert-warning" role="alert">
-    <p>
-      Because you did not submit your project,
-      you cannot participate in peer review. But
-      <a href="{% url 'project_list' course_slug=course.slug project_slug=project.slug %}">
-        you can see other submissions</a>.
-    </p>
-  </div>
-{% else %}
-  <div class="list-group">
-    {% for review in reviews %}
-      <a href="{% url 'projects_eval_submit' course_slug=course.slug project_slug=project.slug review_id=review.id %}"
-          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-        <div>
-          Evaluate: {{ review.submission_under_evaluation.enrollment.display_name }}'s Submission
-          {% if review.optional %}
-            <span class="badge bg-info text-dark ms-2">Optional</span>
-          {% endif %}
-        </div>
-        <span class="badge badge-primary badge-pill">{{ review.get_state_display }}</span>
-      </a>
-    {% endfor %}
-  </div>
+{% if user.is_staff %}
+<div class="pb-2">
+  <a href="{% url 'project_submissions' course.slug project.slug %}">
+    <i class="fas fa-users"></i> View all submissions (Admin only)
+  </a>
+</div>
+{% endif %}
 
-  <div class="text-center mb-2 mt-3">
-    Completed {{ number_of_completed_evaluation }} out of {{ project.number_of_peers_to_evaluate }} mandatory project evaluations.
-    {% if number_of_completed_evaluation == project.number_of_peers_to_evaluate %}
-      <span class="badge bg-success">All mandatory evaluations completed!</span>
-    {% else %}
-      Note that in order to pass this project, you need to finish all mandatory evaluations.
-    {% endif %}
-  </div>
+{% if not is_authenticated %}
+<div class="alert alert-info" role="alert">
+  <p>Please <a href="{% url 'login' %}">log in</a> to see the projects you need to evaluate.</p>
+</div>
+{% elif not has_submission and project.state == 'PR' %}
+<div class="alert alert-warning" role="alert">
+  <p>
+    Because you did not submit your project,
+    you cannot participate in peer review. But
+    <a href="{% url 'project_list' course_slug=course.slug project_slug=project.slug %}">
+      you can see other submissions</a>.
+  </p>
+</div>
+{% else %}
+<div class="list-group">
+  {% for review in reviews %}
+  <a href="{% url 'projects_eval_submit' course_slug=course.slug project_slug=project.slug review_id=review.id %}"
+    class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+    <div>
+      Evaluate: {{ review.submission_under_evaluation.enrollment.display_name }}'s Submission
+      {% if review.optional %}
+      <span class="badge bg-info text-dark ms-2">Optional</span>
+      {% endif %}
+    </div>
+    <span class="badge badge-primary badge-pill">{{ review.get_state_display }}</span>
+  </a>
+  {% endfor %}
+</div>
+
+<div class="text-center mb-2 mt-3">
+  Completed {{ number_of_completed_evaluation }} out of {{ project.number_of_peers_to_evaluate }} mandatory project
+  evaluations.
+  {% if number_of_completed_evaluation == project.number_of_peers_to_evaluate %}
+  <span class="badge bg-success">All mandatory evaluations completed!</span>
+  {% else %}
+  Note that in order to pass this project, you need to finish all mandatory evaluations.
+  {% endif %}
+</div>
 
 {% endif %}
 
 <div class="text-center">
-  <a href="{% url 'project_list' course_slug=course.slug project_slug=project.slug %}"
-      class="btn btn-secondary mt-3">
+  <a href="{% url 'project_list' course_slug=course.slug project_slug=project.slug %}" class="btn btn-secondary mt-3">
     See all projects
   </a>
 </div>
